ensure margin bottom is set on mobile (#33)

--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -5,7 +5,11 @@
 
 .ncce-footer__heading {
   color: $ncce-white;
-  margin: 0;
+  margin-bottom: 20px;
+
+  @include govuk-media-query($from: tablet) {
+    margin: 0;
+  }
 }
 
 .ncce-footer__list {
